--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-23 23:43:34.743790: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-06-25 15:09:28.989784: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,10 +237,10 @@
        "T13       66\n",
        "T12       27\n",
        "T2        16\n",
-       "T14        3\n",
        "T25        3\n",
-       "T15        2\n",
+       "T14        3\n",
        "T29        2\n",
+       "T15        2\n",
        "T17        1\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
@@ -252,12 +252,12 @@
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df['APPLICATION_TYPE'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,11 +271,15 @@
        "T8         737\n",
        "T7         725\n",
        "T10        528\n",
-       "Other      276\n",
+       "T9         156\n",
+       "T13         66\n",
+       "T12         27\n",
+       "T2          16\n",
+       "Other       11\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +287,8 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "cutoff_value = 10\n",
+    "application_types_to_replace = ['T25','T14','T29','T15','T17']\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -295,39 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "C1000    17326\n",
-       "C2000     6074\n",
-       "C1200     4837\n",
-       "C3000     1918\n",
-       "C2100     1883\n",
-       "         ...  \n",
-       "C1370        1\n",
-       "C4120        1\n",
-       "C2600        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
-       "Name: CLASSIFICATION, Length: 71, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Look at CLASSIFICATION value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +319,136 @@
        "C2700      104\n",
        "C2800       95\n",
        "C7100       75\n",
+       "Other       72\n",
+       "C1300       58\n",
+       "C1280       50\n",
+       "C1230       36\n",
+       "C1400       34\n",
+       "C2300       32\n",
+       "C7200       32\n",
+       "C1240       30\n",
+       "C8000       20\n",
+       "C7120       18\n",
+       "C1500       16\n",
+       "C1800       15\n",
+       "C6000       15\n",
+       "C1250       14\n",
+       "C8200       11\n",
+       "C1238       10\n",
+       "C1278       10\n",
+       "C2561        1\n",
+       "C1580        1\n",
+       "C1900        1\n",
+       "C1820        1\n",
+       "C6100        1\n",
+       "C1248        1\n",
+       "C2600        1\n",
+       "C1370        1\n",
+       "C5200        1\n",
+       "C4200        1\n",
+       "C2190        1\n",
+       "C1236        1\n",
+       "C2570        1\n",
+       "C2500        1\n",
+       "C3700        1\n",
+       "C1570        1\n",
+       "C1283        1\n",
+       "C2380        1\n",
+       "C1732        1\n",
+       "C1728        1\n",
+       "C2170        1\n",
+       "C4120        1\n",
+       "C8210        1\n",
+       "C4500        1\n",
+       "C1245        1\n",
+       "C2150        1\n",
+       "Name: CLASSIFICATION, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Look at CLASSIFICATION value counts for binning\n",
+    "application_df['CLASSIFICATION'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C1000    17326\n",
+       "C2000     6074\n",
+       "C1200     4837\n",
+       "C3000     1918\n",
+       "C2100     1883\n",
+       "C7000      777\n",
+       "C1700      287\n",
+       "C4000      194\n",
+       "C5000      116\n",
+       "C1270      114\n",
+       "C2700      104\n",
+       "C2800       95\n",
+       "C7100       75\n",
+       "Other       72\n",
+       "C1300       58\n",
+       "C1280       50\n",
+       "C1230       36\n",
+       "C1400       34\n",
+       "C2300       32\n",
+       "C7200       32\n",
+       "C1240       30\n",
+       "C8000       20\n",
+       "C7120       18\n",
+       "C1500       16\n",
+       "C1800       15\n",
+       "C6000       15\n",
+       "C1250       14\n",
+       "C8200       11\n",
+       "C1238       10\n",
+       "C1278       10\n",
+       "Name: CLASSIFICATION, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
+    "greater_than_one = application_df['CLASSIFICATION'].value_counts().loc[lambda x : x > 1]\n",
+    "greater_than_one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C1000    17326\n",
+       "C2000     6074\n",
+       "C1200     4837\n",
+       "C3000     1918\n",
+       "C2100     1883\n",
+       "C7000      777\n",
+       "C1700      287\n",
+       "C4000      194\n",
+       "C5000      116\n",
+       "C1270      114\n",
+       "C2700      104\n",
+       "Other       98\n",
+       "C2800       95\n",
+       "C7100       75\n",
        "C1300       58\n",
        "C1280       50\n",
        "C1230       36\n",
@@ -360,55 +463,12 @@
        "C6000       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
-       "C1237        9\n",
-       "C1235        9\n",
-       "C7210        7\n",
-       "C1720        6\n",
-       "C2400        6\n",
-       "C4100        6\n",
-       "C1257        5\n",
-       "C1600        5\n",
-       "C0           3\n",
-       "C1260        3\n",
-       "C2710        3\n",
-       "C1234        2\n",
-       "C1246        2\n",
-       "C1267        2\n",
-       "C3200        2\n",
-       "C1256        2\n",
+       "C1278       10\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "C1000    17326\n",
-       "C2000     6074\n",
-       "C1200     4837\n",
-       "Other     2261\n",
-       "C3000     1918\n",
-       "C2100     1883\n",
-       "Name: CLASSIFICATION, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,9 +476,8 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = ['C2150','C1237','C1235','C7210','C1720','C2400','C4100','C1257','C1600','C0','C1260','C2710','C2710','C1234','C1246','C1267','C3200','C1256','C2561','C1580','C1900','C1820','C6100','C1248','C2600','C1370','C5200','C4200','C2190','C1236','C2570','C2500','C3700','C1570','C1283','C2380','C1732','C1728','C2170','C4120','C8210','C4500','C1245']\n",
     "\n",
-    "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
     "    application_df['CLASSIFICATION'] = application_df['CLASSIFICATION'].replace(cls,\"Other\")\n",
     "    \n",
@@ -428,30 +487,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>ASK_AMT</th>\n",
+       "      <th>IS_SUCCESSFUL</th>\n",
+       "      <th>APPLICATION_TYPE_Other</th>\n",
+       "      <th>APPLICATION_TYPE_T10</th>\n",
+       "      <th>APPLICATION_TYPE_T12</th>\n",
+       "      <th>APPLICATION_TYPE_T13</th>\n",
+       "      <th>APPLICATION_TYPE_T19</th>\n",
+       "      <th>APPLICATION_TYPE_T2</th>\n",
+       "      <th>APPLICATION_TYPE_T3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>INCOME_AMT_1-9999</th>\n",
+       "      <th>INCOME_AMT_10000-24999</th>\n",
+       "      <th>INCOME_AMT_100000-499999</th>\n",
+       "      <th>INCOME_AMT_10M-50M</th>\n",
+       "      <th>INCOME_AMT_1M-5M</th>\n",
+       "      <th>INCOME_AMT_25000-99999</th>\n",
+       "      <th>INCOME_AMT_50M+</th>\n",
+       "      <th>INCOME_AMT_5M-10M</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS_N</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS_Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>108590</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>142590</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 72 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   STATUS  ASK_AMT  IS_SUCCESSFUL  APPLICATION_TYPE_Other  \\\n",
+       "0       1     5000              1                       0   \n",
+       "1       1   108590              1                       0   \n",
+       "2       1     5000              0                       0   \n",
+       "3       1     6692              1                       0   \n",
+       "4       1   142590              1                       0   \n",
+       "\n",
+       "   APPLICATION_TYPE_T10  APPLICATION_TYPE_T12  APPLICATION_TYPE_T13  \\\n",
+       "0                     1                     0                     0   \n",
+       "1                     0                     0                     0   \n",
+       "2                     0                     0                     0   \n",
+       "3                     0                     0                     0   \n",
+       "4                     0                     0                     0   \n",
+       "\n",
+       "   APPLICATION_TYPE_T19  APPLICATION_TYPE_T2  APPLICATION_TYPE_T3  ...  \\\n",
+       "0                     0                    0                    0  ...   \n",
+       "1                     0                    0                    1  ...   \n",
+       "2                     0                    0                    0  ...   \n",
+       "3                     0                    0                    1  ...   \n",
+       "4                     0                    0                    1  ...   \n",
+       "\n",
+       "   INCOME_AMT_1-9999  INCOME_AMT_10000-24999  INCOME_AMT_100000-499999  \\\n",
+       "0                  0                       0                         0   \n",
+       "1                  1                       0                         0   \n",
+       "2                  0                       0                         0   \n",
+       "3                  0                       1                         0   \n",
+       "4                  0                       0                         1   \n",
+       "\n",
+       "   INCOME_AMT_10M-50M  INCOME_AMT_1M-5M  INCOME_AMT_25000-99999  \\\n",
+       "0                   0                 0                       0   \n",
+       "1                   0                 0                       0   \n",
+       "2                   0                 0                       0   \n",
+       "3                   0                 0                       0   \n",
+       "4                   0                 0                       0   \n",
+       "\n",
+       "   INCOME_AMT_50M+  INCOME_AMT_5M-10M  SPECIAL_CONSIDERATIONS_N  \\\n",
+       "0                0                  0                         1   \n",
+       "1                0                  0                         1   \n",
+       "2                0                  0                         1   \n",
+       "3                0                  0                         1   \n",
+       "4                0                  0                         1   \n",
+       "\n",
+       "   SPECIAL_CONSIDERATIONS_Y  \n",
+       "0                         0  \n",
+       "1                         0  \n",
+       "2                         0  \n",
+       "3                         0  \n",
+       "4                         0  \n",
+       "\n",
+       "[5 rows x 72 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "dummy_df = pd.get_dummies(application_df)\n",
+    "dummy_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
-    "\n",
+    "X = dummy_df.drop(columns='IS_SUCCESSFUL')\n",
+    "y = dummy_df[\"IS_SUCCESSFUL\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y) \n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
